# roxdb

./: .gitignore  .gitmodules  CMakeLists.txt  arch.drawio
benchmarks/image_features/: CMakeLists.txt  download_dataset.sh  io.cc  io.h  milvus_add.py  milvus_search.py  prepare_dataset.py  query.h  roxdb_add.cc  roxdb_add_search.cc  roxdb_run.sh  roxdb_search.cc  utils.cc  utils.h
benchmarks/sift/: .gitignore  CMakeLists.txt  download_sift.sh  load_sift.cc  multi_vector.cc  search_sift.cc  single_vector.cc  utils.cc  utils.h
examples/: CMakeLists.txt  read_write.cc  search.cc  version.cc
include/roxdb/: db.h  vector.h
src/: db.cc  flatbuffers.fbs  flatbuffers_generated.h  ha_query.cc  ha_query.h  impl.cc  impl.h  stats.h  storage.cc  storage.h  vector.cc  vector.h  vector_distance.h
tests/: CMakeLists.txt  crud.cc  knn.cc  persistency.cc  scan.cc  version.cc
utils/vector_distance/: Makefile  avx2.cc  avx512.cc  benchmark_results.csv  distance.h  main.cc  perf.cc  scalar.cc
